Fix poor footer spacing

--- a/code/styles/base/_forms.scss
+++ b/code/styles/base/_forms.scss
@@ -1,5 +1,5 @@
 form {
-  margin-bottom: $small-spacing;
+  margin-bottom: $small-spacing * 1.5;
 }
 
 fieldset {
