--- a/code/styles/base/_variables.scss
+++ b/code/styles/base/_variables.scss
@@ -41,7 +41,7 @@ $form-box-shadow-focus: $form-box-shadow, 0 0 5px adjust-color($light-gray, $lig
 
 // Line Height
 $base-line-height: 1.7;
-$heading-line-height: 1;
+$heading-line-height: 1.2;
 
 // Other Sizes
 $base-border-radius: 5px;
